--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ management.security.enabled=false
 #logging.level.guru.springframework.controllers=DEBUG
 #logging.level.org.hibernate=ERROR
 #logging.file=logs/spring-boot-logging.log
+
+# BANNER
+banner.charset=UTF-8 # Banner file encoding.
+banner.location=classpath:banner.txt # Banner file location.
+
