Statistics data enable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ management.security.enabled=false
 banner.charset=UTF-8 # Banner file encoding.
 banner.location=classpath:banner.txt # Banner file location.
 
+publish.apiPattern = /rest/.*
+publish.serviceName = kinley
+
